--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -426,10 +426,10 @@ a:focus {
 .gatsby-remark-code-title {
     margin-bottom: -0.6rem;
     padding: 0.5em 1em;
-    font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+    /* font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
       'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
       'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
-      monospace;
+      monospace; */
   
     background-color: black;
     color: white;
@@ -442,4 +442,12 @@ a:focus {
   .gatsby-remark-code-title +.gatsby-highlight {
     border-top-left-radius: 0;
     border-top-right-radius: 0
+  }
+
+  hr {
+      margin: 2rem 0!important;
+  }
+
+  ol {
+      padding-left: 1rem!important;
   }
