--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,3 +1,36 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+article h4 {
+    @apply text-xl;
+    @apply tracking-tight;
+    @apply font-extrabold;
+    @apply text-gray-900;
+    @apply mt-8;
+    @apply mb-4;
+}
+
+article p {
+    @apply max-w-screen-lg;
+    @apply text-lg;
+    @apply leading-8;
+    @apply font-medium;
+    @apply mb-6;
+}
+
+article ul {
+    @apply list-inside;
+    @apply list-disc; 
+    @apply py-2;
+    @apply rounded-md;
+}
+
+
+article ol {
+    @apply list-inside;
+    @apply list-decimal;
+    @apply py-2;
+    @apply rounded-md;
+}
