--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,7 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
+/*---------------------------------------- Gatsby -----------------------------------*/
+.gatsby-remark-code-title {
+    margin-bottom: -0.6rem;
+    padding: 0.5em 1em;
+    /* font-family: Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
+      'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono',
+      'Liberation Mono', 'Nimbus Mono L', Monaco, 'Courier New', Courier,
+      monospace; */
+    font-size: 62.5%;
+    background-color: black;
+    color: white;
+    z-index: 0;
 
+    border-top-left-radius: 0.3em;
+    border-top-right-radius: 0.3em;
+}
+
+.gatsby-remark-code-title+.gatsby-highlight {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0
+}
+
+/*---------------------------------------- Gatsby Article -----------------------------------*/
 article h4 {
     @apply text-xl;
     @apply tracking-tight;
