--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -31,6 +31,7 @@ html {
 
 /*---------------------------------------- Gatsby Article -----------------------------------*/
 .articleContent {
+
     h1, h2, h3, h4, h5, h6 {
         @apply tracking-tight;
         @apply font-extrabold;
@@ -136,4 +137,12 @@ html {
 
 .section-more{
     background: #D8F3FF;
+}
+
+.callout-yellow{ 
+    background: #fff6e3;
+    border-color: #FFC555;
+    margin: 2em 0 4em;
+    border: 1px dashed;
+    padding: 16px 25px 16px 20px;
 }
