--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -92,7 +92,7 @@ html {
         height: 1px;
         border-color: #efeff1;
         border-top-width: 1px;
-        margin-bottom: 1.5em;
+        @apply my-2;
     }
     a.em{
         
