--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -92,7 +92,7 @@ html {
         height: 1px;
         border-color: #efeff1;
         border-top-width: 1px;
-        @apply my-2;
+        @apply my-4;
     }
     a.em{
         
@@ -134,7 +134,9 @@ html {
     }
 }
 
-
+/*
+    section more style
+ */
 .section-more{
     background: #D8F3FF;
 }
@@ -145,4 +147,58 @@ html {
     margin: 2em 0 4em;
     border: 1px dashed;
     padding: 16px 25px 16px 20px;
+}
+
+
+
+
+/*
+    Accordion Style
+ */
+.accordion {
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 2px;
+}
+
+.accordion__item + .accordion__item {
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.accordion__button {
+    background-color: #f4f4f4;
+    color: #444;
+    cursor: pointer;
+    padding: 9px 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+}
+
+.accordion__button:hover {
+    background-color: #ddd;
+}
+
+.accordion__button:before {
+    display: inline-block;
+    content: '';
+    height: 10px;
+    width: 10px;
+    margin-right: 12px;
+    border-bottom: 2px solid currentColor;
+    border-right: 2px solid currentColor;
+    transform: rotate(-45deg);
+}
+
+.accordion__button[aria-expanded='true']::before,
+.accordion__button[aria-selected='true']::before {
+    transform: rotate(45deg);
+}
+
+[hidden] {
+    display: none;
+}
+
+.accordion__panel {
+    padding: 20px;
+    animation: fadein 0.35s ease-in;
 }
