--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700");
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+
 html {
   @apply font-body;
   font-size: 90%;
+  color: #3b454e;
 }
 
 a {
@@ -79,6 +83,12 @@ header {
     @apply text-gray-900;
     @apply mt-8;
     @apply mb-4;
+  }
+
+  p{
+    strong {
+      color: #c34b4b;
+    }
   }
 
   h1 {
@@ -174,8 +184,9 @@ header {
       @apply text-gray-600;
     }
 
-    background: #fdfaf6;
-    border-left: 4px solid rgb(255, 228, 161);
+    background: #f5f7f9;
+    border-radius: 2px;
+    border-left: 4px solid #3884ff;
   }
 
   .gatsby-resp-image-wrapper {
@@ -296,9 +307,10 @@ header {
   tbody {
     td {
       @apply text-sm;
-      @apply border-b-2;
+      @apply border-b;
       @apply px-4;
       @apply py-3;
+      border-color: #f6f6f7;
     }
   }
 }
