--- a/assets/css/my-prism-theme.scss
+++ b/assets/css/my-prism-theme.scss
@@ -30,16 +30,19 @@ pre[class*="language-"] {
 /* Code blocks */
 pre[class*="language-"] {
   position: relative;
-  border: 3px solid #eaecef;
+  //border: 1px solid #eaecef;
+  border: 1px solid #ededed;
+  background-color: #eef7ff5e;
+  //border: 1px solid #f6f8fa;
   //box-shadow: -1px 0 0 0 #358ccb, 0 0 0 1px #dfdfdf;
-  background-color: rgb(246, 248, 250);
+  //background-color: rgb(246, 248, 250);
   //background-image: linear-gradient(transparent 50%, rgba(69, 142, 209, 0.04) 50%);
   background-size: 3em 3em;
   background-origin: content-box;
   background-attachment: local;
   margin: .5em 0;
   padding: 1em;
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 pre[class*="language-"] > code {
