--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -9,6 +9,10 @@ html {
   color: #3b454e;
 }
 
+body {
+  transition: all .1s ease;
+}
+
 .max-w-8xl {
   max-width: 90rem;
 }
@@ -33,7 +37,7 @@ header {
   }
   li{
     @apply rounded;
-    transition: all .2s cubic-bezier(0.075, 0.82, 0.165, 1);
+    // transition: all .2s cubic-bezier(0.075, 0.82, 0.165, 1);
     &:hover {
       padding: 0.5rem 1rem;
       margin: 0 -1rem;
@@ -355,7 +359,7 @@ header {
 
   aside {
     margin-left: 30rem;
-    margin-top: -50px;
+    // margin-top: -50px;
     max-width: 30rem;
     min-width: 20rem;
     width: min-content;
