--- a/assets/css/darkMode.scss
+++ b/assets/css/darkMode.scss
@@ -2,17 +2,27 @@ body.dark {
     -webkit-font-smoothing: antialiased;
     --bg: #000000;
     --bg2: #333333;
+    --bg3: #ecc781;
     --textNormal: rgba(255, 255, 255, 0.88);
     --textTitle: white;
     --textLink: yellow;
     --hr: hsla(0, 0%, 100%, 0.2);
 
     background: var(--bg);
+
+    ::selection {
+        background: #9c1919;
+        color: #fff;
+    }
+    main{ 
+        background: #121212;
+    }
+
     header {
         .lll {
             color: var(--textTitle);
             span {
-                color: #fc0;
+                color:  var(--bg3);
             }
         }
     }
@@ -37,11 +47,11 @@ body.dark {
 
     .articleContent {
         h1,h2,h3,h4,h5,h6 {
-            color: #ffd479;
+            color:  var(--bg3);
         }
         aside {
             color: var(--textTitle);
-            border: 2px solid #fc0;
+            border: 2px solid var(--bg3);
             background:  var(--bg);
             .toc-title {
                 color: var(--textTitle);
@@ -49,7 +59,7 @@ body.dark {
         }
 
         blockquote {
-            border-color: #fc0;
+            border-color: var(--bg3);
             background: var(--bg2);
             p {
                 color: var(--textTitle);
@@ -60,8 +70,15 @@ body.dark {
     .more-post {
         & > div {
             background: var(--bg);
-            p {
-                color: #999;
+            border: 1px solid var(--bg3);
+            a, p {
+                color: var(--bg3);
+            }
+            &:hover {
+                background: var(--bg3);
+                a, p {
+                    color: var(--bg2);
+                }
             }
         }
     }
