--- a/assets/css/prism-light-theme.scss
+++ b/assets/css/prism-light-theme.scss
@@ -1,6 +1,5 @@
 body.light {
-    code[class*="language-"],
-  pre[class*="language-"] {
+    code[class*="language-"], pre[class*="language-"] {
     color: black;
     background: none;
     font-family:  "Roboto Mono", "Fira Code", Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
@@ -79,19 +78,16 @@ body.light {
     position: relative;
     padding: .1em .2em;
     border-radius: 0.3em;
-    // color: #c92c2c;
-    color: #175199;
-    //border: 1px solid rgba(0, 0, 0, 0.1);
+    color: #333333d1;
     display: inline;
     white-space: normal;
-    // background-color: #ffffe6;
-    background: rgba(0,132,255,.08);
+    background: #ecbd879e;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
     @apply text-base;
     @apply mx-2;
-    font-weight: normal;
+    @apply font-semibold;
   }
   
   .token.comment,
